--- a/tkytekstil/Views/anasayfa/sayfa.cshtml
+++ b/tkytekstil/Views/anasayfa/sayfa.cshtml
@@ -40,12 +40,12 @@
     </div>
 </div>
 
-<div class="section section-padding" style="padding-top: 50px; padding-bottom: 50px;">
+<!--<div class="section section-padding" style="padding-top: 50px; padding-bottom: 50px;">
     <div class="container">
         <div class="feature-wrap">
-            <div class="row row-cols-lg-4 row-cols-xl-auto row-cols-sm-2 row-cols-1 justify-content-between mb-n5">
+            <div class="row row-cols-lg-4 row-cols-xl-auto row-cols-sm-2 row-cols-1 justify-content-between mb-n5">-->
                 <!-- Feature Start -->
-                <div class="col mb-5" data-aos="fade-up" data-aos-delay="300">
+                <!--<div class="col mb-5" data-aos="fade-up" data-aos-delay="300">
                     <div class="feature">
                         <div class="icon text-primary align-self-center">
                             <img src="~/assets/images/icons/feature-icon-2.png" alt="Feature Icon">
@@ -55,10 +55,10 @@
                             <p>Siparişlerinizde kargo ücretsiz</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <!-- Feature End -->
                 <!-- Feature Start -->
-                <div class="col mb-5" data-aos="fade-up" data-aos-delay="500">
+                <!--<div class="col mb-5" data-aos="fade-up" data-aos-delay="500">
                     <div class="feature">
                         <div class="icon text-primary align-self-center">
                             <img src="~/assets/images/icons/feature-icon-3.png" alt="Feature Icon">
@@ -68,10 +68,10 @@
                             <p>Günün 24 saati destek</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <!-- Feature End -->
                 <!-- Feature Start -->
-                <div class="col mb-5" data-aos="fade-up" data-aos-delay="700">
+                <!--<div class="col mb-5" data-aos="fade-up" data-aos-delay="700">
                     <div class="feature">
                         <div class="icon text-primary align-self-center">
                             <img src="~/assets/images/icons/feature-icon-4.png" alt="Feature Icon">
@@ -81,10 +81,10 @@
                             <p>5 günde geri iade garantisi</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <!-- Feature End -->
                 <!-- Feature Start -->
-                <div class="col mb-5" data-aos="fade-up" data-aos-delay="900">
+                <!--<div class="col mb-5" data-aos="fade-up" data-aos-delay="900">
                     <div class="feature">
                         <div class="icon text-primary align-self-center">
                             <img src="~/assets/images/icons/feature-icon-1.png" alt="Feature Icon">
@@ -94,12 +94,12 @@
                             <p>Herbir siparişte indirim</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <!-- Feature End -->
-            </div>
+            <!--</div>
         </div>
     </div>
-</div>
+</div>-->
 
 @*@{await Html.RenderPartialAsync("brands"); }*@
 
