--- a/tkytekstil/Views/bayi/kayitsonuc.cshtml
+++ b/tkytekstil/Views/bayi/kayitsonuc.cshtml
@@ -44,7 +44,7 @@
                 <div class="error_form">
                     @if (ViewBag.Type == 1)
                     {
-                        <h4 class="title">Başarılı</h4>
+                        <h4 class="title" style="color:#1be112;">Başarılı</h4>
                         <h2 class="sub-title">Başvurunuz alındı</h2>
                         <p>@ViewBag.Result</p>
                         <a href="@Url.Action("sayfa","anasayfa")" class="btn btn-primary btn-hover-dark rounded-0">Ana Sayfa'ya dönün</a>
