--- a/tkytekstil/Views/bayi/urunlerim.cshtml
+++ b/tkytekstil/Views/bayi/urunlerim.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "urunlerim";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
-    List<OrderProductDto> ordersToProduct = ViewBag.OrdersToProduct as List<OrderProductDto>;
+    List<OrderProductsDto> ordersToProduct = ViewBag.OrdersProduct as List<OrderProductsDto>;
 
 }
 
