--- a/tkytekstil/Views/bayi/hesabim.cshtml
+++ b/tkytekstil/Views/bayi/hesabim.cshtml
@@ -1,13 +1,12 @@
 ﻿@using tkytekstil.ENGINE.Dtos.OrderData
-@using tkytekstil.ENGINE.Dtos.ShoppersData
-@using tkytekstil.Core
+@model tkytekstil.ENGINE.Dtos.ShoppersData.ShoppersDto
 
 @{
     ViewData["Title"] = "hesabim";
     Layout = "~/Views/Shared/_Layout.cshtml";
     List<OrderDto> orders = ViewBag.Orders as List<OrderDto>;
 
-    ShoppersDto shopper = SessionExtensionMethod.GetObject<ShoppersDto>(Context.Session, "account");
+    //ShoppersDto shopper = SessionExtensionMethod.GetObject<ShoppersDto>(Context.Session, "account");
 
 }
 
@@ -77,42 +76,42 @@
                         <div class="col-md-6">
                             <div class="checkout-form-list">
                                 <label>İl<span class="required">*</span></label>
-                                <input type="text" class="disabled" name="@shopper.city" value="@shopper.ShopperCity">
+                                <input type="text" class="disabled" name="@Model.city" value="@Model.ShopperCity">
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="checkout-form-list">
                                 <label>İlçe <span class="required">*</span></label>
-                                <input placeholder="" class="disabled" type="text" name="@shopper.province" value="@shopper.ShopperProvice">
+                                <input placeholder="" class="disabled" type="text" name="@Model.province" value="@Model.ShopperProvice">
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="checkout-form-list">
                                 <label>Adınız Soyadınız <span class="required">*</span></label>
-                                <input placeholder="" class="disabled" type="text" name="@shopper.ShopperName" value="@shopper.ShopperName">
+                                <input placeholder="" class="disabled" type="text" name="@Model.ShopperName" value="@Model.ShopperName">
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="checkout-form-list">
                                 <label>Email Address<span class="required">*</span></label>
-                                <input placeholder="" class="disabled" type="text" name="@shopper.ShopperEmail" value="@shopper.ShopperEmail">
+                                <input placeholder="" class="disabled" type="text" name="@Model.ShopperEmail" value="@Model.ShopperEmail">
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="checkout-form-list">
                                 <label>Telefon No</label>
-                                <input placeholder="" class="disabled" name="@shopper.ShopperPhone" value="@shopper.ShopperPhone" type="text">
+                                <input placeholder="" class="disabled" name="@Model.ShopperPhone" value="@Model.ShopperPhone" type="text">
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="checkout-form-list">
                                 <label>Adres<span class="required">*</span></label>
-                                <textarea class="form-control disabled">@shopper.ShopperAddress</textarea>
+                                <textarea class="form-control disabled">@Model.ShopperAddress</textarea>
                             </div>
                         </div>
 
